# python-invest

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: test.yml
advanced/: index.html
cli/: index.html
docs/: advanced.md  index.md  requirements.txt
docs/CLI/: cli.md
docs/stylesheets/: extra.css
pyinvest/: __init__.py  const.py
pyinvest/invest/: __init__.py  crypto.py  main.py  utils.py  validators.py
python_invest/: const.py
python_invest/cli/: cli.py
python_invest/cli/commands/: __init__.py  config.py  crypto.py  pandas_to_rich.py  utils.py
python_invest/invest/: crypto.py  firebase.py  main.py  utils.py  validators.py
search/: search_index.json
tests/: conftest.py  test_cli.py  test_cryptos.py  utils.py
tests/data/: cryptoDaily.csv  cryptoDaily.json  cryptoMonthly.csv  cryptoMonthly.json  cryptoWeekly.csv  cryptoWeekly.json
