[tool.poetry]
name = "python-invest"
version = "0.1.1"
description = "Package to financial data extraction with Python."
authors = ["Claudio Lima <clcostaf@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
pytest = "^7.2.1"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.0"
pre-commit = "^3.1.1"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
blue = "^0.9.1"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Documentation" = "https://pyinvest.readthedocs.io/en/latest/"
"GitHub" = "https://github.com/clcosta/python-invest"
